--- a/wallet/wallet.html
+++ b/wallet/wallet.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title class="pageTopTitle" page-id="1">钱包</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/bottomNav.css"/>
+    <script src="../js/public/rem.js"></script>
+    <link rel="stylesheet" href="../css/public/reset.css">
+    <link rel="stylesheet" href="../css/public/bottomNav.css"/>
 </head>
 <body>
     <div class="user">
@@ -13,9 +14,10 @@
         <!-- 底部导航 -->
         <div class="bottomNavWrap container" id="bottomNavWrap"></div>
     </div>
-    <script src="js/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/rem.js"></script>
-     <!--底部nav=>Tab功能-->
-	<script src="js/bottomNavJs.js"></script>
+    
+    
+    <script src="../js/public/jquery-1.8.3.min.js"></script>
+    <!--底部nav=>Tab功能-->
+	<script src="../js/public/bottomNavJs.js"></script>
 </body>
 </html>
