--- a/wallet/wallet.html
+++ b/wallet/wallet.html
@@ -72,7 +72,7 @@
 							</p>
 						</div>
 						<div class="tu">
-							<img src="../image/public/timg.jpg" />
+							<img src="../image/wallet/timg.jpg" />
 						</div>
 						<i class="iconfont shut">&#xe676;</i>
 						
