--- a/user/lj_sz.html
+++ b/user/lj_sz.html
@@ -13,7 +13,7 @@
 	<body>
 		 <!-- 头部 -->
         <div class="header-zp">
-            <span class="return" onclick="javascript:history.back(-1)"><img src="../image/public/return-zp@2x.png" /></span>
+            <span class="return" onclick="javascript:history.back(-1)"><img src="" /></span>
             <h3>修改密码</h3>
         </div>
 		
