--- a/user/lj_szmm.html
+++ b/user/lj_szmm.html
@@ -4,16 +4,16 @@
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<title>设置密码</title>
-		 <script src="js/rem.js" ></script>
-		<link rel="stylesheet" href="css/lj_sz.css" />
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/base.css" />
+		 <script type="text/javascript" src="../js/public/rem.js" ></script>
+	    <link rel="stylesheet" href="../css/home/lj_sz.css" />
+	    <link rel="stylesheet" href="../css/public/reset.css" />
+	   	<link rel="stylesheet" href="../css/public/base.css" />
 	   
 	</head>
 	<body>
 		 <!-- 头部 -->
         <div class="header-zp">
-            <span class="return" onclick="javascript:history.back(-1)"><img src="./img/return-zp@2x.png" /></span>
+            <span class="return" onclick="javascript:history.back(-1)"><img src="../img/return-zp@2x.png" /></span>
             <h3>设置密码</h3>
         </div>
 		
@@ -25,11 +25,11 @@
 						<input type="text"  placeholder="旧密码"/>
 					</li>-->
 					<li>
-						<img src="img/lj_szmm_img2.png" />
+						<img src="../image/home/lj_szmm_img2.png" />
 						<input type="text"  placeholder="新密码"/>
 					</li>
 					<li>
-						<img src="img/lj_szmm_img2.png" />
+						<img src="../image/home/lj_szmm_img2.png" />
 						<input type="text"  placeholder="确认新密码"/>
 					</li>
 					
