--- a/wallet/wallet.html
+++ b/wallet/wallet.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/public/bottomNav.css"/>
     <link rel="stylesheet" href="../css/public/base.css"/>
     <link rel="stylesheet" href="../css/wallet/wallet.css"/>
-    <link rel="stylesheet" type="text/css" href="font01/iconfont.css"/>
+    <link rel="stylesheet" type="text/css" href="../font/iconfont.css"/>
     <script src="../js/public/rem.js"></script>
     <link rel="stylesheet" href="../css/public/reset.css">
     <link rel="stylesheet" href="../css/public/bottomNav.css"/>
