--- a/home/index.html
+++ b/home/index.html
@@ -67,7 +67,7 @@
                     </a>
                 </li>
                 <li class="itemColor-6">
-                    <a href="#">
+                    <a href="directDrive.html">
                         <img src="../image/home/Assets-icon@2x.png" alt="">
                         <span>团队</span>
                         <span>35.00</span>
