--- a/home/index.html
+++ b/home/index.html
@@ -33,7 +33,7 @@
         <div class="nav-wrap-zp">
             <ul>
                 <li class="itemColor-1">
-                    <a href="#">
+                    <a href="../invest/index__ylf.html">
                         <img src="../image/home/Assets-icon@2x.png" alt="">
                         <span>投资总额</span>
                         <span>26035.00</span>
