--- a/home/index.html
+++ b/home/index.html
@@ -33,9 +33,9 @@
         <div class="nav-wrap-zp">
             <ul>
                 <li class="itemColor-1">
-                    <a href="#">
+                    <a href="../wallet/wallet.html">
                         <img src="../image/home/Assets-icon@2x.png" alt="">
-                        <span>投资总额</span>
+                        <span>投资</span>
                         <span>26035.00</span>
                     </a>
                 </li>
