--- a/wallet/wallet.html
+++ b/wallet/wallet.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     <div class="user">
-        <div class="header-zp">
+        <!--<div class="header-zp">
             <h3>总收益</h3>
-        </div>
+        </div>-->
         <div class="zjy_box">
         	<ul class="zjy_ul">
         		<li class="on">我的钱包</li>
         		<li>交易历史</li>
-        		<li>终止交易</li>
+        		<!--<li>终止交易</li>-->
         	</ul>
         	<div class="zjy_box_conten">
         		<div class="zjy_box_conten_item avtive">
@@ -132,22 +132,19 @@
         				</tr>
         			</table>
         		</div>
-        		<div class="zjy_box_conten_item">
+        		<!--<div class="zjy_box_conten_item">
         			<p style="text-align: center;font-size: .3rem;">暂无交易记录</p>
-        		</div>
+        		</div>-->
         	</div>
         </div>
         <!-- 底部导航 -->
         <div class="bottomNavWrap container" id="bottomNavWrap"></div>
     </div>
-
-    <script src="../js/public/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../js/public/rem.js"></script>
-     <!--底部nav=>Tab功能-->
-	<script src="../js/public/bottomNavJs.js"></script>
-	<script type="text/javascript" src="../js/public/tab.js" ></script>
-	<script type="text/javascript" src="../js/wallet/waller.js" ></script>
+	
 	<script src="../js/public/jquery-1.8.3.min.js"></script>
+	<script src="../js/public/tab.js" ></script>
+	<script  src="../js/wallet/waller.js" ></script>
+	
     <!--底部nav=>Tab功能-->
 	<script src="../js/public/bottomNavJs.js"></script>
 </body>
