--- a/home/index.html
+++ b/home/index.html
@@ -35,7 +35,7 @@
                 <li class="itemColor-1">
                     <a href="#">
                         <img src="../image/home/Assets-icon@2x.png" alt="">
-                        <span>投资总额</span>
+                        <span>投资</span>
                         <span>26035.00</span>
                     </a>
                 </li>
@@ -62,14 +62,21 @@
                 </li>
                 <li class="itemColor-5">
                     <a href="#">
-                        <img src="../image/home/ActivateAccount-icon@2x.png" alt="">
-                        <span>激活账户</span>
+                        <img src="../image/home/share-icon@2x.png" alt="">
+                        <span>分享</span>
                     </a>
                 </li>
                 <li class="itemColor-6">
                     <a href="#">
                         <img src="../image/home/Assets-icon@2x.png" alt="">
                         <span>团队</span>
+                        <span>35.00</span>
+                    </a>
+                </li>
+                <li class="itemColor-7">
+                    <a href="#">
+                        <img src="../image/home/withdraw-money-icon@2x.png" alt="">
+                        <span>提币</span>
                         <span>35.00</span>
                     </a>
                 </li>
