--- a/home/totalRevenue_zp.html
+++ b/home/totalRevenue_zp.html
@@ -16,6 +16,7 @@
         <div class="header-zp">
             <span class="return" onclick="returnFun()"><img src="../image/public/return-zp@2x.png" /></span>
             <h3>总收益</h3>
+            <!-- <span class="share-btn"><img src="../image/public/share-btn-zp.png" /></span> -->
         </div>
         <!-- 标题 -->
         <div class="thead-zp">
