--- a/user/editPass.html
+++ b/user/editPass.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	    <title>首页</title>
+	    <title>修改密码</title>
 	    <script type="text/javascript" src="../js/public/rem.js" ></script>
 	    <link rel="stylesheet" href="../css/home/lj_set.css" />
 	    <link rel="stylesheet" href="../css/public/reset.css" />
 	    <link rel="stylesheet" href="../css/public/base.css" />
-	    
 	    
 	</head>
 	<body>
