--- a/user/lj_Card.html
+++ b/user/lj_Card.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>上传身份证</title>
-		<script type="text/javascript" src="../js/public/rem.js"></script>
+		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<script src="../js/public/rem.js"></script>
 		<link rel="stylesheet" href="../css/home/lj_style.css" />
 		<link rel="stylesheet" href="../css/public/reset.css" />
 		<link rel="stylesheet" href="../css/public/base.css" />
