--- a/user/setPass.html
+++ b/user/setPass.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<title>设置密码</title>
-		 <script type="text/javascript" src="../js/public/rem.js" ></script>
+		<script  src="../js/public/rem.js"></script>
 	    <link rel="stylesheet" href="../css/home/lj_set.css" />
 	    <link rel="stylesheet" href="../css/public/reset.css" />
 	    <link rel="stylesheet" href="../css/public/base.css" />
@@ -13,7 +13,7 @@
 	<body>
 		 <!-- 头部 -->
         <div class="header-zp">
-            <span class="return" onclick="javascript:history.back(-1)"><img src="../image/public/return-zp@2x.png" /></span>
+            <span class="return" onclick="returnFun()"><img src="../image/public/return-zp@2x.png" /></span>
             <h3>设置密码</h3>
         </div>
 		
@@ -42,5 +42,7 @@
 			</div>	
 		</div>
 		
+		<script src="../js/public/jquery-1.8.3.min.js"></script>
+		<script src="../js/public/base.js"></script>
 	</body>
 </html>
