--- a/user/lj_Card.html
+++ b/user/lj_Card.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<title>上传身份证</title>
 		<script type="text/javascript" src="../js/public/rem.js"></script>
 		<link rel="stylesheet" href="../css/home/lj_style.css" />
@@ -10,7 +11,7 @@
 		<link rel="stylesheet" href="../css/public/base.css" />
 	</head>
 
-	<body>
+	<body style="width: 750px;">
 
 		<!-- 头部 -->
 		<div class="header-zp">
@@ -50,7 +51,7 @@
 		</section>
 		
 		<div class="lj_szmm_a">
-			<a href="#">确认修改</a>
+			<a href="#">提交</a>
 		</div>
 
 		<script src="../js/public/jquery-1.8.3.min.js"></script>
