--- a/my/my.html
+++ b/my/my.html
@@ -10,6 +10,7 @@
 		<link  rel="stylesheet" href="../css/my/myself.css"/>
 		<link rel="stylesheet" href="../css/public/base.css">
 		
+		
 	</head>
 	<body>
 		
@@ -57,5 +58,6 @@
 		<script src="../js/myself/myself.js"></script>
 	    <!--底部nav=>Tab功能-->
 		<script src="../js/public/bottomNavJs.js"></script>
+		<script src="../js/public/base.js"></script>
 	</body>
 </html>
