--- a/qrcode/qrcode.html
+++ b/qrcode/qrcode.html
@@ -141,6 +141,7 @@
 
 		<script src="../js/public/jquery-1.8.3.min.js"></script>
 		<script src="qrcode.js"></script>
+		<script src="../js/public/base.js"></script>
 		<!--蒙版出现=> 底部（box）不能滑动-->
 		<script>
 			$(document).ready(function() {
