--- a/my/editPass.html
+++ b/my/editPass.html
@@ -5,7 +5,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	    <title>修改密码</title>
 	    <script type="text/javascript" src="../js/public/rem.js" ></script>
-	    <link rel="stylesheet" href="../css/home/lj_set.css" />
+	    <link rel="stylesheet" href="../css/my/editPass.css" />
 	    <link rel="stylesheet" href="../css/public/reset.css" />
 	    <link rel="stylesheet" href="../css/public/base.css" />
 	    
@@ -50,7 +50,7 @@
 			<a href="#">退出登录</a>
 		</div>
 		
-		
+    	<script src="../js/public/jquery-1.8.3.min.js"></script>
 		<script src="../js/public/base.js"></script>
 	</body>
 </html>
