--- a/my/setPass.html
+++ b/my/setPass.html
@@ -5,7 +5,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<title>设置密码</title>
 		<script  src="../js/public/rem.js"></script>
-	    <link rel="stylesheet" href="../css/home/lj_set.css" />
+	    <link rel="stylesheet" href="../css/my/editPass.css" />
 	    <link rel="stylesheet" href="../css/public/reset.css" />
 	    <link rel="stylesheet" href="../css/public/base.css" />
 	   
