--- a/user/editPass.html
+++ b/user/editPass.html
@@ -28,13 +28,13 @@
 						<p>电话号码:</p>
 						<input type="text" value="18605480486" />
 					</li>
-					<a href="lj_set_password.html">
+					<a href="setPass.html">
 						<li>
 							<p>修改密码</p>
 							<img src="../image/home/lj_sz_img1.png" />
 						</li>
 					</a>
-					<a href="lj_Card.html">
+					<a href="upIDCard.html">
 						<li class="lj_last_li">
 							<p>上传身份证</p>
 							<img src="../image/home/lj_sz_img1.png" />
