--- a/user/upIDCard.html
+++ b/user/upIDCard.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="../css/public/base.css" />
 	</head>
 
-	<body>
+	<body style="max-width: 750px;">
 
 		<!-- 头部 -->
 		<div class="header-zp">
