--- a/invest/index__ylf.html
+++ b/invest/index__ylf.html
@@ -7,11 +7,9 @@
 		 	<link rel="stylesheet"href="../css/public/reset.css" />
 		<title>投资历史</title>
 			 <style>
-		 	.tanxing{display: flex;text-align: center;height: 1rem;width: 100%;padding-top: .5rem;background-color: #12183c;display: -webkit-box;
-	        display: -moz-box;
-	        display: -ms-flexbox;
-	        display: -webkit-flex;}
-		 	.tanxing li{flex-wrap:nowrap;color: white;font-size: .3rem;list-style: none;width: 30%;}
+			 .zoshoyi{padding-top:.88rem;box-sizing:border-box;}
+		 	.tanxing{text-align: center;height: 1rem;width: 100%;background-color: #12183c;display:flex;}
+		 	.tanxing li{flex-wrap:wrap;color: white;font-size: .3rem;list-style: none;width: 20%;}
 		 	.tanxing1{display: flex;text-align: center;height: .7rem;width: 100%;line-height: 1rem;}
 		 	.tanxing1 p{flex-wrap:nowrap;font-size: .3rem;list-style: none;width: 30%;color: white;}
 		 	.tanxing2{display: flex;text-align: center;height: .7rem;width: 100%;line-height: 1rem;}
@@ -32,7 +30,7 @@
 		</ul>
 				<div class="tanxing1">
 					<p>2019-11-14</p>
-					<p>配套</p>
+					<p>配套</p>	
 					<p class="you1">4000-6000</p>
 					<p>不在状态</p>
 				</div>
