--- a/home/index.html
+++ b/home/index.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="itemColor-5">
-                    <a href="#">
+                    <a href="../qrcode/qrcode.html">
                         <img src="../image/home/share-icon@2x.png" alt="">
                         <span>分享</span>
                     </a>
