--- a/home/present.html
+++ b/home/present.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title>提币</title>
-		 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" type="text/css" href="../../css/public/reset.css"/>
-		<link rel="stylesheet" href="../../css/public/bottomNav.css"/>
-		<link rel="stylesheet" type="text/css" href="../../css/public/base.css"/>
-		<link rel="stylesheet" type="text/css" href="../../css/home/subpage/present.css"/>
-		<script type="text/javascript" src="../../js/public/jquery-1.8.3.min.js"></script>
-		<script type="text/javascript" src="../../js/public/rem.js"></script>
+		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<script src="../js/public/rem.js"></script>
+		<link rel="stylesheet" href="../css/public/reset.css"/>
+		<link rel="stylesheet" href="../css/public/bottomNav.css"/>
+		<link rel="stylesheet" href="../css/public/base.css"/>
+		<link rel="stylesheet" href="../css/home/subpage/present.css"/>
+		
 	</head>
 	<body>
 		<!-- 最大的外套 -->
 		<div class="currency_wrap">
 			<!-- 头部-s -->
 			<div class="header-zp">
-			    <span class="return" onclick="javascript:history.back(-1)"><img src="../../image/public/return-zp@2x.png" /></span>
+			    <span class="return" onclick="returnFun()"><img src="../image/public/return-zp@2x.png" /></span>
 			    <h3>提币</h3>
 			</div>
 			<!-- 头部-e -->
@@ -56,10 +56,9 @@
 				</div>
 				<!-- 列表项 -e -->
 			</div>
-			 <!-- 底部导航 -->
-			<div class="bottomNavWrap container" id="bottomNavWrap"></div>
-			 <!--底部nav=>Tab功能-->
-			<script src="../../js/public/bottomNavJs.js"></script>
+			
+			<script src="../js/public/jquery-1.8.3.min.js"></script>
+			<script src="../js/public/base.js"></script>
 		</div>
 	</body>
 </html>
