--- a/home/qrcode/qrcode.html
+++ b/home/qrcode/qrcode.html
@@ -5,9 +5,9 @@
 		<title>分享</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-		<script src="../js/public/rem.js"></script>
-		<link rel="stylesheet" href="../css/public/base.css">
-		<link rel="stylesheet" href="../css/public/reset.css">
+		<script src="../../js/public/rem.js"></script>
+		<link rel="stylesheet" href="../../css/public/base.css">
+		<link rel="stylesheet" href="../../css/public/reset.css">
 		
 		<style>
 			* {
@@ -110,9 +110,9 @@
 			
 	        <!-- 头部 -->
 	       <div class="header-zp">
-            <span class="return" onclick="returnFun()"><img src="../image/public/return-zp@2x.png" /></span>
+            <span class="return" onclick="returnFun()"><img src="../../image/public/return-zp@2x.png" /></span>
             <h3>分享</h3>
-            <span class="share-btn bottmBut"><img src="../image/public/share-btn-zp.png" /></span> 
+            <span class="share-btn bottmBut"><img src="../../image/public/share-btn-zp.png" /></span> 
            </div>
 	        
 	        
@@ -139,14 +139,15 @@
 
 
 
-		<script src="../js/public/jquery-1.8.3.min.js"></script>
+		<script src="../../js/public/jquery-1.8.3.min.js"></script>
 		<script src="qrcode.js"></script>
-		<script src="../js/public/base.js"></script>
+		<script src="../../js/public/base.js"></script>
 		<!--蒙版出现=> 底部（box）不能滑动-->
 		<script>
 			$(document).ready(function() {
+				/*背景图*/
 				//var random_bg=parseInt(3*Math.random());
-				var bg = 'url(../image/qrcode/' + "1" + '.jpg)';
+				var bg = 'url(../../image/qrcode/' + "1" + '.jpg)';
 				$("#pic").css("background-image", bg);
 			});
 
@@ -236,7 +237,7 @@
 					if(methodD == 0) {
 						//切换背景代码
 						var random_bg = parseInt(7 * Math.random());
-						var bg = 'url(../image/qrcode/' + random_bg + '.jpg)';
+						var bg = 'url(../../image/qrcode/' + random_bg + '.jpg)';
 						$("#pic").css("background-image", bg);
 					} 
 				})
