提币跳转 再次更改路径

--- a/home/index.html
+++ b/home/index.html
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li class="itemColor-7">
-                    <a href="#">
+                    <a href="present.html">
                         <img src="../image/home/withdraw-money-icon@2x.png" alt="">
                         <span>提币</span>
                         <!-- <span>35.00</span> -->
