--- a/my/upIDCard.html
+++ b/my/upIDCard.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="../css/public/base.css" />
 	</head>
 
-	<body style="max-width: 750px;">
+	<body>
 		<!-- 头部 -->
 		<div class="header-zp">
 			<span class="return" onclick="returnFun()"><img src="../image/public/return-zp@2x.png" /></span>
