--- a/login/retrieve.html
+++ b/login/retrieve.html
@@ -7,15 +7,11 @@
     <title>找回密码</title>
     <link rel="stylesheet" href="../css/public/reset.css">
     <link rel="stylesheet" type="text/css" href="../../css/public/base.css"/>
-    <link rel="stylesheet" href="../css/user/retrieve.css">
+    <link rel="stylesheet" href="../css/login/retrieve.css">
     <script src="../js/public/rem.js"></script>
 </head>
 <body>
     <div class="retrievebox">
-        <!-- <div class="headerbox">
-                <img src="../image/user/left.png" alt="" class="goback" data-num="1" onclick="returnFun()">
-                <p class="headertitle">手机短信找回密码</p>
-        </div> -->
         <div class="header-zp">
             <span class="return" onclick="javascript:history.back(-1)">
                 <img src="../../image/public/return-zp@2x.png" /></span>
@@ -48,6 +44,6 @@
            </div>
     </div>
 </body>
-<script src="../js/public/jquery-1.8.3.min.js"></script>
- <script src="../js/user/retrieve.js"></script>
+<script src="../js/public/jquery-1.8.3.js"></script>
+ <script src="../js/login/retrieve.js"></script>
 </html>
