--- a/login/register.html
+++ b/login/register.html
@@ -7,16 +7,11 @@
     <title>注册</title>
     <link rel="stylesheet" href="../css/public/reset.css">
     <link rel="stylesheet" type="text/css" href="../../css/public/base.css"/>
-    <link rel="stylesheet" href="../css/user/register.css">
+    <link rel="stylesheet" href="../css/login/register.css">
     <script src="../js/public/rem.js"></script>
 </head>
 <body>
         <div class="registerbox">
-            <!-- 头部 -->
-            <!-- <div class="headerbox">
-                <img src="../image/user/left.png" alt="" class="goback" data-num="1" onclick="returnFun()">
-                <p class="headertitle">注册</p>
-            </div> -->
             <div class="header-zp">
                 <span class="return" onclick="javascript:history.back(-1)">
                     <img src="../../image/public/return-zp@2x.png" /></span>
@@ -71,6 +66,6 @@
         </div>
 </body>
  <script src="../js/public/jquery-1.8.3.min.js"></script>
- <script src="../js/user/register.js">
+ <script src="../js/login/register.js">
  </script>
 </html>
