--- a/home/present.html
+++ b/home/present.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<title>提币</title>
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<script src="../js/public/rem.js"></script>
 		<link rel="stylesheet" href="../css/public/reset.css"/>
 		<link rel="stylesheet" href="../css/public/bottomNav.css"/>
 		<link rel="stylesheet" href="../css/public/base.css"/>
@@ -50,15 +49,65 @@
 						66
 					</div>
 					<!-- 提取按钮 -->
-					<div class="currency_btn">
+					<div class="currency_btn" onclick="send(_id,state)">
 						提取
 					</div>
 				</div>
 				<!-- 列表项 -e -->
+				<!-- 列表项 -s-->
+				<div class="currency_list">
+					<!-- 商品名称 -->
+					<div class="currency_name">
+						<div class="currency_name_text">
+							Bitcoin
+						</div>
+					</div>
+					<!-- 商品数量 -->
+					<div class="currency_num">
+						66
+					</div>
+					<!-- 提取按钮 -->
+					<div class="currency_btn" onclick="send(_id,state)">
+						提取
+					</div>
+				</div>
+				<!-- 列表项 -e -->
+				<!-- 提取弹框-s -->
+				<div class="popover">
+					<div class="popover_content">
+						暂时没有内容哦！
+						<div class="popover_affirm">
+							<span class="true">确认</span>
+							<span class="false">取消</span>
+						</div>
+					</div>
+				</div>
+				<!-- 提取弹框-e -->
 			</div>
 			
+		</div>
 			<script src="../js/public/jquery-1.8.3.min.js"></script>
 			<script src="../js/public/base.js"></script>
-		</div>
+			<script>
+			function send(id, state) {
+				$('.popover').show();
+			}
+			$(document).ready(function() {
+				//阻止事件冒泡
+				$('.popover_content').click(function(e) {
+					e.stopPropagation();
+					$('.true').click(function() {
+						$('.popover').hide();
+					});
+					$('.false').click(function() {
+						$('.popover').hide();
+					});
+				});
+				//点击背景隐藏
+				$('.popover').click(function() {
+					$(this).hide();
+				})
+			});
+		</script>
 	</body>
 </html>
