--- a/home/present.html
+++ b/home/present.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="../css/public/reset.css"/>
 		<link rel="stylesheet" href="../css/public/bottomNav.css"/>
 		<link rel="stylesheet" href="../css/public/base.css"/>
-		<link rel="stylesheet" href="../css/home/subpage/present.css"/>
+		<link rel="stylesheet" href="../css/home/present.css"/>
 		
 	</head>
 	<body>
