--- a/my/setPass.html
+++ b/my/setPass.html
@@ -16,7 +16,7 @@
             <span class="return" onclick="returnFun()"><img src="../image/public/return-zp@2x.png" /></span>
             <h3>修改密码</h3>
         </div>
-		
+		<div class="lj_all">
 		<div class="lj_wrap">
 			<div class="lj_szmm_main">
 				<ul>
@@ -41,7 +41,7 @@
 				
 			</div>	
 		</div>
-		
+		</div>
 		<script src="../js/public/jquery-1.8.3.min.js"></script>
 		<script src="../js/public/base.js"></script>
 	</body>
