--- a/my/editUser.html
+++ b/my/editUser.html
@@ -17,6 +17,9 @@
             <h3>设置</h3>
         </div>
 		
+		<div class="lj_all">
+			
+		
 		<div class="lj_wrap">
 			<div class="lj_sz_main">
 				<ul>
@@ -28,29 +31,14 @@
 						<p>电话号码:</p>
 						<input type="text" value="18605480486" />
 					</li>
-<<<<<<< HEAD:my/editPass.html
-					<a href="setPass.html">
-						<li>
-							<p>修改密码</p>
-							<img src="../image/home/lj_sz_img1.png" />
-						</li>
-					</a>
-					<a href="upIDCard.html">
-						<li class="lj_last_li">
-							<p>上传身份证</p>
-							<img src="../image/home/lj_sz_img1.png" />
-						</li>
-					</a>
-=======
 					<li onclick="jumpFun('setPass.html')">
 						<p>修改密码</p>
 						<img src="../image/home/lj_sz_img1.png" />
 					</li>
-					<li class="lj_last_li" onclick="jumpFun('upIDCard.html')">
+					<li class="lj_last_li" onclick="jumpFun('upIDCard_2.html')">
 						<p>上传身份证</p>
 						<img src="../image/home/lj_sz_img1.png" />
 					</li>
->>>>>>> 285d6192805b7a49da7601e9158beee0eeef47af:my/editUser.html
 					
 				</ul>
 			</div>
@@ -60,7 +48,7 @@
 			<a class="lj_sz_btn_a" href="#">保存</a>
 			<a href="../login/login.html">退出登录</a>
 		</div>
-		
+		</div>
     	<script src="../js/public/jquery-1.8.3.min.js"></script>
 		<script src="../js/public/base.js"></script>
 	</body>
