--- a/my/upIDCard_2.html
+++ b/my/upIDCard_2.html
@@ -6,7 +6,7 @@
 		<title>上传身份证</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<script src="../js/public/rem.js"></script>
-		<link rel="stylesheet" href="../css/my/upIDCard.css" />
+		<link rel="stylesheet" href="../css/my/upIDCard2.css" />
 		<link rel="stylesheet" href="../css/public/reset.css" />
 		<link rel="stylesheet" href="../css/public/base.css" />
 		
@@ -18,6 +18,7 @@
 			<span class="return" onclick="returnFun()"><img src="../image/public/return-zp@2x.png" /></span>
 			<h3>上传身份证</h3>
 		</div>
+		<div class="lj_wrap">
 		<!--渲染wrpa-->
 		<div class="renderingRrpa">
 			<!-- '创建一个image对象'，给canvas绘制使用 -->
@@ -26,18 +27,21 @@
 			<!--上传图片wrap-->
 			<div class="uploadWrap">
 				<!--每个 上传图片box---->
+				<p>身份证正面</p>
 				<div class="imageEchoBox">
 					<!--回显的图片-->
-					<img class="preViewImg" src="" />
+					<img class="preViewImg" src="../image/home/acc_img.png" />
 					<!--上传图片 tyle='file'-->
+					<a class="uploadFile2" href="#">选择图片</a>
 					<input class="uploadFile" type="file" onchange="UpLoad(this)" name="file" id="" value="0" accept="image/*" />
 				</div>
-
+				<p>身份证反面</p>
 				<!--上传图片box 2---->
 				<div class="imageEchoBox">
 					<!--回显的图片-->
-					<img class="preViewImg" src="" />
+					<img class="preViewImg" src="../image/home/acc_img.png" />
 					<!--上传图片 tyle='file'-->
+					<a class="uploadFile2" href="#">选择图片</a>
 					<input class="uploadFile" type="file" onchange="UpLoad(this)" name="file" id="" value="1" accept="image/*"  />
 				</div>
 
@@ -50,6 +54,8 @@
 				<!--确定 按钮-->
 				<p class="decideToSellBut">确定</p>
 			</div>
+		</div>
+
 		</div>
 
 		<script src="../js/public/jquery-1.8.3.min.js"></script>
