修改首页冲突，提币bug

--- a/home/present.html
+++ b/home/present.html
@@ -48,7 +48,7 @@
 						66
 					</div>
 					<!-- 提取按钮 -->
-					<div class="currency_btn" onclick="send("_id1")">
+					<div class="currency_btn" onclick="send('_id1')">
 						提取
 					</div>
 				</div>
@@ -66,7 +66,7 @@
 						66
 					</div>
 					<!-- 提取按钮 -->
-					<div class="currency_btn" onclick="send("_id2")">
+					<div class="currency_btn" onclick="send('_id2')">
 						提取
 					</div>
 				</div>
