--- a/login/register.html
+++ b/login/register.html
@@ -22,31 +22,50 @@
                         <div class="info mistake"></div>
                       <div class="from-group">
                           <span class="from-tit">用户名:</span>
-                          <input type="text" placeholder="请输入用户名" name="name" value class="pptt username " >
+                          <div class="from-icon">
+                              <img src="../../image/user/user.png" alt="">
+                          <input type="text" placeholder="请输入用户名" name="uname" value class="pptt username " >
+                          </div>
                       </div>
                       <div class="info mistake"></div>
                       <div class="from-group">
                             <span class="from-tit">密码:</span>
+                            <div class="from-icon">
+                                    <img src="../../image/user/suo.png" alt="">
                             <input type="password"  placeholder="请输入用户密码" name="pwd"value class="pptt password">
+                            </div>
                         </div>
                         <div class="info mistake"></div>
                         <div class="from-group">
                          <span class="from-tit">邮箱:</span>
+                         <div class="from-icon">
+                                <img src="../../image/user/youxiang.png" alt="">
                           <input type="text"  placeholder="请输入用户邮箱" name="email"value class="pptt email">
+                        </div>
                     </div>
                     <div class="info mistake"></div>
                     <div class="from-group">
                             <span class="from-tit">手机号:</span>
+                            <div class="from-icon">
+                                    <img src="../../image/user/shouji.png" alt="">
                              <input type="phone" placeholder="请输入手机号码" name="phone" class="pptt phone">
                    </div>
-                   <div class="from-group policy">
-                        <span class="from-cc">*直推人用户名:</span>
-                         <input type="text"  placeholder="直推人用户名"name="DirectName" value class="pptt">
+                </div>
+                   <div class="info mistake"></div>
+                   <div class="from-group ">
+                        <span class="from-tit">推荐人:</span>
+                        <div class="from-icon">
+                                <img src="../../image/user/good.png" alt="">
+                         <input type="text"  placeholder="直推人用户名"name="directname" value class="pptt recommend">
+                        </div>
                    </div>
-                   <div class="send-code mistake info"></div>
+                   <div class="send-codemsg mistake info"></div>
                    <div class="from-group ">
                          <span class="from-tit">验证码:</span>
+                         <div class="from-icon from-verify">    
+                                <img src="../../image/user/yanz.png" alt="">
                          <input type="text"  placeholder="请输入验证码" value  name="verify"class="pptt verify">
+                        </div>
                          <button class="send-code" type="button">获取验证码</button>
                    </div>
                    <div class="from-group policy">
@@ -55,7 +74,7 @@
                         <span class="info "></span>
                    </div>
                    <div class="reg-btn">
-                       <button type="button" class="btn dis">注册</button>
+                       <button type="button" class="btn dis" disabled=disabled>注册</button>
                    </div>
                 </form>
                 <div class="login-new">
