--- a/wallet/wallet.html
+++ b/wallet/wallet.html
@@ -141,6 +141,9 @@
         <div class="bottomNavWrap container" id="bottomNavWrap"></div>
     </div>
 	
+	<!--弹框-阴影-->
+	<div class="shadow"></div>
+	
 	<script src="../js/public/jquery-1.8.3.min.js"></script>
 	<script src="../js/public/tab.js" ></script>
 	<script  src="../js/wallet/waller.js" ></script>
