--- a/my/editUser.html
+++ b/my/editUser.html
@@ -35,7 +35,7 @@
 						<p>修改密码</p>
 						<img src="../image/home/lj_sz_img1.png" />
 					</li>
-					<li class="lj_last_li" onclick="jumpFun('upIDCard_2.html')">
+					<li class="lj_last_li" onclick="jumpFun('upIDCardNew.html')">
 						<p>上传身份证</p>
 						<img src="../image/home/lj_sz_img1.png" />
 					</li>
