--- a/my/upIDCardNew.html
+++ b/my/upIDCardNew.html
@@ -59,6 +59,7 @@
 		</div>
 
 		<script src="../js/public/jquery-1.8.3.min.js"></script>
+		<script src="../js/public/base.js"></script>
 
 		<script>
 			/*对应 回显图片的下标*/
