--- a/my/upIDCard_2.html
+++ b/my/upIDCard_2.html
@@ -59,7 +59,10 @@
 		</div>
 
 		<script src="../js/public/jquery-1.8.3.min.js"></script>
-
+		<script src="../js/public/base.js"></script>
+		
+		
+		
 		<script>
 			/*对应 回显图片的下标*/
 			var ind = null;
