--- a/login/login.html
+++ b/login/login.html
@@ -25,7 +25,7 @@
                   <span class="from-tit">手机号:</span>
                   <div class="from-icon">
                         <img src="../../image/user/shouji.png" alt="">
-                  <input type="text" name="phone" placeholder="请输入手机号"class="pptt phone">
+                  <input type="text" name="phone" placeholder="请输入手机号"class="pptt phone" value>
                     </div>
               </div>
               <div class="info mistake"></div>
@@ -33,7 +33,7 @@
                     <span class="from-tit">密码:</span>
                     <div class="from-icon">
                             <img src="../../image/user/suo.png" alt="">
-                    <input type="password" name="pwd" placeholder="请输入密码" class="pptt pwd">
+                    <input type="password" name="pwd" placeholder="请输入密码" class="pptt pwd" value>
                 </div>
                 </div>
                 <button class="btn dis" type="button" disabled>登录</button>
