--- a/home/index.html
+++ b/home/index.html
@@ -68,7 +68,7 @@
                 </li>
                 <li class="itemColor-6">
                     <a href="directDrive.html">
-                        <img src="../image/home/Assets-icon@2x.png" alt="">
+                        <img src="../image/home/team-icon@2x.png" alt="">
                         <span>团队</span>
                         <!-- <span>35.00</span> -->
                     </a>
@@ -78,6 +78,12 @@
                         <img src="../image/home/withdraw-money-icon@2x.png" alt="">
                         <span>提币</span>
                         <!-- <span>35.00</span> -->
+                    </a>
+                </li>
+                <li class="itemColor-8">
+                    <a href="#">
+                        <img src="../image/home/stock-icon.png" alt="">
+                        <span>股权</span>
                     </a>
                 </li>
             </ul>
