--- a/home/present.html
+++ b/home/present.html
@@ -77,7 +77,9 @@
 				<!-- 提取弹框-s -->
 				<div class="popover">
 					<div class="popover_content">
-						暂时没有内容哦！
+						请输入提取金额:<input id="popover_num" type="number" />
+						<br />
+						转换后的金额:<input id="popover_convert" type="number" disabled="disabled"  />
 						<div class="popover_affirm">
 							<span class="true">确认</span>
 							<span class="false">取消</span>
