--- a/home/qrcode/qrcode.html
+++ b/home/qrcode/qrcode.html
@@ -160,9 +160,8 @@
 		<script src="../../js/public/base.js"></script>
 		<script src="../../js/public/jquery-1.8.3.min.js"></script>
 		<script src="qrcode.js"></script>
-		<script src="../../js/public/base.js"></script>
+		<script src="../../js/public/html2canvas.js"></script>
 		
-		<script src="../../js/public/base.js"></script>
 		<!--蒙版出现=> 底部（box）不能滑动-->
 		<script>
 			$(document).ready(function() {
