第七阶段半

--- a/home/index.html
+++ b/home/index.html
@@ -67,21 +67,21 @@
                     </a>
                 </li>
                 <li class="itemColor-6">
-                    <a href="directDrive.html">
+                    <a href="./directDrive.html">
                         <img src="../image/home/team-icon@2x.png" alt="">
                         <span>团队</span>
                         <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-7">
-                    <a href="present.html">
+                    <a href="./present.html">
                         <img src="../image/home/withdraw-money-icon@2x.png" alt="">
                         <span>提币</span>
                         <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-8">
-                    <a href="#">
+                    <a href="./stockRight.html">
                         <img src="../image/home/stock-icon.png" alt="">
                         <span>股权</span>
                     </a>
