--- a/invest/index__ylf.html
+++ b/invest/index__ylf.html
@@ -10,8 +10,8 @@
 
 		<style>
 			 .zoshoyi{padding-top:.88rem;box-sizing:border-box;}
-		 	.tanxing{text-align: center;height: 1rem;width: 100%;background-color: #12183c;display:flex;align-items: center;}
-		 	.tanxing li{flex-wrap:wrap;color: white;font-size: .3rem;list-style: none;width:30%;}
+		 	.tanxing{text-align: center;height: 1rem;width: 100%;background-color: #12183c;display:flex;padding-top: .5rem;}
+		 	.tanxing li{flex-wrap:wrap;color: white;font-size: .3rem;list-style: none;width: 30%;}
 		 	.tanxing1{display: flex;text-align: center;height: .7rem;width: 100%;line-height: 1rem;}
 		 	.tanxing1 p{flex-wrap:nowrap;font-size: .3rem;list-style: none;width: 30%;color: white;}
 		 	.tanxing2{display: flex;text-align: center;height: .7rem;width: 100%;line-height: 1rem;}
