--- a/login/register.html
+++ b/login/register.html
@@ -50,7 +50,7 @@
 						<span class="from-tit">手机号:</span>
 						<div class="from-icon">
 							<img src="../image/login/shouji.png" alt="">
-							<input type="phone" placeholder="请输入手机号码" name="phone" class="pptt phone">
+							<input type="phone" placeholder="请输入手机号码" name="phone"  value class="pptt phone">
 						</div>
 					</div>
 					<div class="info mistake"></div>
@@ -89,5 +89,4 @@
 	<script src="../js/public/jquery-1.8.3.min.js"></script>
 	<script src="../js/login/register.js"></script>
 	<script src="../js/public/base.js"></script>
-
 </html>
