底部导航，后台传特定的值，跳转页面

--- a/home/index.html
+++ b/home/index.html
@@ -89,8 +89,11 @@
             </ul>
         </div>
 
-        <!-- 底部导航 -->
-        <div class="bottomNavWrap container" id="bottomNavWrap"></div>
+        <!-- 底部导航 
+        	data-state="0" => 未-登陆，
+        	data-state="1" => 已-登陆，
+        -->
+        <div class="bottomNavWrap container" id="bottomNavWrap" data-state="0"></div>
         
     </div>
     
