--- a/my/my.html
+++ b/my/my.html
@@ -52,8 +52,11 @@
 				</ul>
 			</div>
 		</div>
-		<!-- 底部导航 -->
-		<div class="bottomNavWrap container" id="bottomNavWrap"></div>
+		<!-- 底部导航 
+        	data-state="0" => 未-登陆，
+        	data-state="1" => 已-登陆，
+        -->
+        <div class="bottomNavWrap container" id="bottomNavWrap" data-state="0"></div>
 
 		<script src="../js/public/jquery-1.8.3.js"></script>
 		<script src="../js/my/my.js"></script>
