--- a/wallet/wallet.html
+++ b/wallet/wallet.html
@@ -134,8 +134,11 @@
         		</div>-->
         	</div>
         </div>
-        <!-- 底部导航 -->
-        <div class="bottomNavWrap container" id="bottomNavWrap"></div>
+        <!-- 底部导航 
+        	data-state="0" => 未-登陆，
+        	data-state="1" => 已-登陆，
+        -->
+        <div class="bottomNavWrap container" id="bottomNavWrap" data-state="0"></div>
     </div>
 	
 	<!--弹框-阴影-->
