--- a/login/register.html
+++ b/login/register.html
@@ -43,7 +43,7 @@
 						<span class="from-tit">确认密码:</span>
 						<div class="from-icon">
 							<img src="../image/login/suo.png" alt="">
-							<input type="password" placeholder="请第二次输入用户密码" name="pwd2" value class="pptt affirmpwd">
+							<input type="password" placeholder="再次确认密码" name="pwd2" value class="pptt affirmpwd">
 						</div>
 					</div>
 					<div class="info mistake"></div>
